# Physics-Engine

./: CMakeLists.txt  README.md
engine/: CMakeLists.txt
engine/core/: CMakeLists.txt
engine/core/graphicscourse/: CMakeLists.txt
engine/core/graphicscourse/camera/: Camera.cc  Camera.h
engine/core/graphicscourse/dirLight/: DirLight.cc  DirLight.h
engine/core/graphicscourse/graphicsNode/: GraphicsNode.cc  GraphicsNode.h
engine/core/graphicscourse/inputHandler/: InputHandler.cc  InputHandler.h
engine/core/graphicscourse/lightManager/: LightManager.cc  LightManager.h
engine/core/graphicscourse/material/: Material.cc  Material.h
engine/core/graphicscourse/material/blinnPhongMaterial/: BlinnPhongMaterial.cc  BlinnPhongMaterial.h
engine/core/graphicscourse/material/defaultMaterial/: DefaultMaterial.cc  DefaultMaterial.h
engine/core/graphicscourse/meshResource/: MeshResource.cc  MeshResource.h
engine/core/graphicscourse/pointLight/: PointLight.cc  PointLight.h
engine/core/graphicscourse/shaderResource/: ShaderResource.cc  ShaderResource.h
engine/core/graphicscourse/textureResource/: TextureResource.cc  TextureResource.h
engine/core/mathlib/: CMakeLists.txt  mat4.h  vec3.h  vec4.h
engine/core/physicscourse/: CMakeLists.txt  CollisionSystem.cc  CollisionSystem.h  ForceApplier.cc  ForceApplier.h  GameObject.cc  PhysicsNode.cc  PhysicsNode.h  PhysicsObject.cc  PhysicsObject.h  PhysicsWorld.cc  PhysicsWorld.h  Picker.cc  Picker.h  Plane.cc  Plane.h  Ray.cc  Ray.h
engine/fx/: CMakeLists.txt  gltf.h
engine/nlohmann/: CMakeLists.txt
engine/render/: debugrender.cc  debugrender.h  physics.cc  renderdevice.cc  textureresource.cc  window.h
projects/collisiondetection/: CMakeLists.txt
projects/collisiondetection/code/: collisiondetectionapp.cc  collisiondetectionapp.h  main.cc
projects/modelloadexample/: CMakeLists.txt
projects/modelloadexample/code/: main.cc  modelloadapp.cc  modelloadapp.h
projects/rayintersection/: CMakeLists.txt
projects/rayintersection/code/: main.cc  rayintersectapp.cc  rayintersectapp.h
projects/response/: CMakeLists.txt
projects/response/code/: main.cc  responseapp.cc  responseapp.h
projects/spacegame/code/: spacegameapp.cc  spaceship.cc
projects/unconstraineddynamics/: CMakeLists.txt
projects/unconstraineddynamics/code/: main.cc  unconstraineddynamicsapp.cc  unconstraineddynamicsapp.h
resources/gltf/: cylinder.gltf  ground.gltf  icosphere.gltf  quad.gltf  subdivcube.gltf
resources/gltf/NormalTangentMirrorTest/: NormalTangentMirrorTest.gltf
resources/meshes/: shoes.gltf
resources/shaders/: BlinnPhongBaseFragment.glsl  BlinnPhongBaseVertex.glsl  BlinnPhongNormalFragment.glsl  BlinnPhongNormalFragmentMultipleLights.glsl  BlinnPhongNormalVertexMultipleLights.glsl  DefaultFragmentShader.glsl  DefaultVertexShader.glsl  DeferredGeoPassFragment.glsl  DeferredGeoPassVertex.glsl  DeferredLightPassDirFragment.glsl  DeferredLightPassFragment.glsl  DeferredLightPassPointFragment.glsl  DeferredLightPassPointVertex.glsl  DeferredLightPassVertex.glsl  FragmentShader.txt  PassthroughFragment.glsl  PassthroughVertex.glsl
